servicemesh/05_retries/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: backend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: backend.training.svc.cluster.local
      timeout: 8s      
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
